Fix sub-tab-header margin mismatch causing nav/header overlap on desktop

--- a/src/index.css
+++ b/src/index.css
@@ -1570,7 +1570,7 @@ button { user-select: none; font-family: inherit; }
   .sub-tab-header {
     max-width: 1080px;
     padding: 32px 40px 0;
-    margin-left: 200px;
+    margin-left: 260px;
   }
 }
 
